# AirDropPro

./: .gitignore  Cargo.toml  README.md  build.rs  config.ini
assets/: AirDropPro.desktop  airdroppro.appdata.xml  app.airdroppro.desktop
src/: config.rs  logger.rs  main.rs  mdns.rs  server.rs  tray.rs  utils.rs
