[package]
name = "AirDropPro"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
arboard = "3.6.1"
base64 = "0.22.1"
configparser = "3.1.0"
dirs = "6.0.0"
image = "0.25.8"
local-ip-address = "0.6.5"
log = "0.4.28"
mdns-sd = "0.15.1"
mime_guess = "2.0.5"
notify-rust = "4.11.7"
regex = "1.11.2"
rouille = "3.6.2"
simplelog = "0.12.2"
tao = "0.34.3"
tray-icon = "0.21.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.deb]
name = "AirDropPro"
maintainer = "Simplenty <simplenty@icloud.com>"
copyright = "file://LICENSE"
depends = ["libgtk-3-dev", "libxdo-dev", "libayatana-appindicator3-dev"]
section = "utilities"
assets = [
    ["target/release/AirDropPro", "/usr/bin/", "755"]
]